@@ -21,6 +21,8 @@ dependencies {
 	implementation "org.springframework:spring-context:${springVersion}"
     implementation "org.springframework:spring-aspects:${springVersion}"
 	implementation "org.springframework:spring-jdbc:${springVersion}"
+    
+    runtimeOnly "org.aspectj:aspectjweaver:${aspectjVersion}"
 
 	implementation "org.hsqldb:hsqldb:${hsqldbVersion}"
 
@@ -40,7 +42,16 @@ dependencies {
 	testImplementation "org.hamcrest:hamcrest:${hamcrestVersion}"
 }
 
+String aspectjweaverPath(){
+     return sourceSets.getByName("main").runtimeClasspath.find {
+         cls -> return cls.getName().contains("aspectjweaver")
+     }
+}
+
+final ASPECTJ_WEAVER_PATH = aspectjweaverPath()
+
 test {
+    jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED", "-javaagent:${ASPECTJ_WEAVER_PATH}"
     // Test를 다른 JDK 버전으로 실행하고 싶다면 버전 부분 변경.
     javaLauncher = javaToolchains.launcherFor {
         languageVersion = JavaLanguageVersion.of("${javaVersion}")
@@ -69,5 +80,6 @@ run {
 */
 
 application {
+    applicationDefaultJvmArgs = ["--add-opens=java.base/java.lang=ALL-UNNAMED", "-javaagent:${ASPECTJ_WEAVER_PATH}"]
     mainClass = 'org.fp024.study.spring5recipes.bookshop.Main'
 }
